--- a/Business Project/ICProjects.html
+++ b/Business Project/ICProjects.html
@@ -1,1 +1,20 @@
-IC
+<!DOCTYPE html>
+<html>
+
+<link rel="stylesheet" type="text/css" href="CSS/ProjectsStyle.css">
+
+
+  <head>
+    <form method="get" action="ICHome.html"> <button  type="submit"> Home</button></form>
+    <form method="get" action="ICProjects.html"> <button  type="submit" > Projects</button></form>
+    <form method="get" action="ICContact.html"> <button type="submit" >Contact us and Donate</button></form>
+
+  </head>
+
+  <body>
+    <img src="Images/Interact.png" alt="Interact Club" style="width: 50px; height: 50px;">
+    <font size="100">  Projects</font>
+
+    <p>Interact Club works on a variety projects throughout the year. Bellow are just a few of ourprojects that we have done. If you want to see more of our projects <a href=""
+    <img src="Images/PbandJs.png" alt="The Interact Club making PB and J's">
+  </body>
