--- a/Business Project/ICHome.html
+++ b/Business Project/ICHome.html
@@ -4,24 +4,29 @@
 
 <link rel="stylesheet" type="text/css" href="CSS/HomeStyle.css">
 
+
     <head>
-      <button>Home</button>
-      <button>Projects</button>
-      <button>Contact us and Donate</button>
+      <form method="get" action="ICHome.html"> <button id=b1 type="submit">Home</button></form>
+
+      <form method="get" action="ICProjects.html"> <button id=b2 type="submit" >Projects</button></form>
+
+      <form method="get" action="ICContact.html"> <button id=b3 type="submit" >Contact us and Donate</button></form>
     </head>
 
 
       <body>
-        <h1>Interact Club</h1>
-
-          <img src="Images/PbandJs.png" alt="PB and J">
+        <img src="Images/Interact.png" alt="Interact Club" style="width: 45px; height: 45px;">
+        <font size="100">  Interact Club</font>
+          <p>
+          <img src="Images/ClubPic.png" alt="Picture of all the club members in the Interact Club" style="width: 500px; height: 300px align:"center">
+        </p>
 
         <h2>Who we are</h2>
         <div> </div> Interact Club is a community service club. We are a group of High Schoolers who are passionate about helping others. Our club advisor is Lori Lowensen who is very commited to our club and helping others. We do community service in our local community of Castroville. We are active all year and work on multiple things. We raise our funds and are thankful for those who donatae to us.
 
         <h2>What we do</h2>
         <div> </div> As an Interact Club, we work on a variety of projects. We have created a family resource center for the low income families in our community. We feed the homeless when we make PB & J's.
-        <button>More info</button>
+        <form method="get" action="ICProjects.html"> <button id=b2 type="submit" >More information</button></form>
 
         <script src="JS/Home.js"></script>
 
